USA-Canada borders dataset works
Need to decide whether to use edges for wait times.

--- a/Scrapbook.ipynb
+++ b/Scrapbook.ipynb
@@ -44,7 +44,8 @@
        " 'cdcs_social_vulnerability_index_county_level',\n",
        " 'cdphe_health_facilities',\n",
        " 'coronavirus_world_airport_impacts',\n",
-       " 'definitive_healthcare_usa_hospital_beds']"
+       " 'definitive_healthcare_usa_hospital_beds',\n",
+       " 'border_wait_times_at_us_canada_border']"
       ]
      },
      "execution_count": 3,
@@ -226,20 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "72836"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/esri_covid-19/esri_covid-19/cdcs-social-vulnerability-index-svi-2016-overall-svi-census-tract-level.csv'\n",
     "db.load_file(kFILE_PATH, 'cdcs_social_vulnerability_index_tract_level')"
@@ -247,20 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3142"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/esri_covid-19/esri_covid-19/cdcs-social-vulnerability-index-svi-2016-overall-svi-county-level.csv'\n",
     "db.load_file(kFILE_PATH, 'cdcs_social_vulnerability_index_county_level')"
@@ -268,20 +247,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3580"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/esri_covid-19/esri_covid-19/cdphe-health-facilities.csv'\n",
     "db.load_file(kFILE_PATH, 'cdphe_health_facilities')"
@@ -289,23 +257,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6581"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/esri_covid-19/esri_covid-19/definitive-healthcare-usa-hospital-beds.csv'\n",
     "db.load_file(kFILE_PATH, 'definitive_healthcare_usa_hospital_beds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/geotab/border-wait-times-at-us-canada-border.csv'\n",
+    "db.load_file(kFILE_PATH, 'border_wait_times_at_us_canada_border')"
    ]
   },
   {
@@ -321,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/Users/milko/Local/Data/Disease/Kaggle-COVID-19/esri_covid-19/esri_covid-19/coronavirus-world-airport-impacts.csv')\n",
+    "df = pd.read_csv(kFILE_PATH)\n",
     "df.info()"
    ]
   },
@@ -331,7 +298,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['ident'].nunique()"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "can_columns = [\n",
+    "    'borderid', 'canadaport', 'canadaborderzone',\n",
+    "    'can_iso_3166_2', 'borderlatitude', 'borderlongitude'\n",
+    "]\n",
+    "usa_columns = [\n",
+    "    'borderid', 'americaport', 'americaborderzone',\n",
+    "    'us_iso_3166_2', 'borderlatitude', 'borderlongitude'\n",
+    "]\n",
+    "\n",
+    "can_border = pd.DataFrame()\n",
+    "usa_border = pd.DataFrame()\n",
+    "\n",
+    "for borderid in df['borderid'].unique():\n",
+    "    \n",
+    "    can_group = df[df['borderid'] == borderid].iloc[0][can_columns]\n",
+    "    can_group['index'] = 'CAN-{}'.format(borderid)\n",
+    "    can_border = can_border.append(can_group, ignore_index=True)\n",
+    "    \n",
+    "    usa_group = df[df['borderid'] == borderid].iloc[0][usa_columns]\n",
+    "    usa_group['index'] = 'USA-{}'.format(borderid)\n",
+    "    usa_border = usa_border.append(usa_group, ignore_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "can_border"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "usa_border"
    ]
   },
   {
