Finalised Harvard Global Health Institute data

--- a/Scrapbook.ipynb
+++ b/Scrapbook.ipynb
@@ -45,7 +45,15 @@
        " 'cdphe_health_facilities',\n",
        " 'coronavirus_world_airport_impacts',\n",
        " 'definitive_healthcare_usa_hospital_beds',\n",
-       " 'border_wait_times_at_us_canada_border']"
+       " 'border_wait_times_at_us_canada_border',\n",
+       " 'github_belgium_regions',\n",
+       " 'github_italy_regions',\n",
+       " 'github_uk_regions',\n",
+       " 'github_france_regions',\n",
+       " 'github_spain_regions',\n",
+       " 'harvard_global_health_institute_20',\n",
+       " 'harvard_global_health_institute_40',\n",
+       " 'harvard_global_health_institute_60']"
       ]
      },
      "execution_count": 3,
@@ -59,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +76,7 @@
        "4159"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +97,7 @@
        "3193"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +118,7 @@
        "8591"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +139,7 @@
        "8463"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +160,7 @@
        "10"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +181,7 @@
        "66"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +202,7 @@
        "1372"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +223,7 @@
        "7904"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +244,7 @@
        "72836"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +265,7 @@
        "3142"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +286,7 @@
        "3580"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +307,7 @@
        "6581"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +328,7 @@
        "145049"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,75 +340,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv(kFILE_PATH)\n",
-    "df.info()"
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/github/cases-and-deaths-by-regions-in-belgium.csv'\n",
+    "db.load_file(kFILE_PATH, 'github_belgium_regions')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "777"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.head()"
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/github/covid-19-italy-situation-monitoring-by-region.csv'\n",
+    "db.load_file(kFILE_PATH, 'github_italy_regions')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4739"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "can_columns = [\n",
-    "    'borderid', 'canadaport', 'canadaborderzone',\n",
-    "    'can_iso_3166_2', 'borderlatitude', 'borderlongitude'\n",
-    "]\n",
-    "usa_columns = [\n",
-    "    'borderid', 'americaport', 'americaborderzone',\n",
-    "    'us_iso_3166_2', 'borderlatitude', 'borderlongitude'\n",
-    "]\n",
-    "\n",
-    "can_border = pd.DataFrame()\n",
-    "usa_border = pd.DataFrame()\n",
-    "\n",
-    "for borderid in df['borderid'].unique():\n",
-    "    \n",
-    "    can_group = df[df['borderid'] == borderid].iloc[0][can_columns]\n",
-    "    can_group['index'] = 'CAN-{}'.format(borderid)\n",
-    "    can_border = can_border.append(can_group, ignore_index=True)\n",
-    "    \n",
-    "    usa_group = df[df['borderid'] == borderid].iloc[0][usa_columns]\n",
-    "    usa_group['index'] = 'USA-{}'.format(borderid)\n",
-    "    usa_border = usa_border.append(usa_group, ignore_index=True)\n"
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/github/covid-19-uk-historical-data.csv'\n",
+    "db.load_file(kFILE_PATH, 'github_uk_regions')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4528"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "can_border"
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/github/covid19-epidemic-french-national-data.csv'\n",
+    "db.load_file(kFILE_PATH, 'github_france_regions')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "589"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "usa_border"
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/github/covid19-spain-cases.csv'\n",
+    "db.load_file(kFILE_PATH, 'github_spain_regions')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/harvard_global_health_institute/hospital-capacity-by-state-20-population-contracted.csv'\n",
+    "db.load_file(kFILE_PATH, 'harvard_global_health_institute_20')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "108"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/harvard_global_health_institute/hospital-capacity-by-state-40-population-contracted.csv'\n",
+    "db.load_file(kFILE_PATH, 'harvard_global_health_institute_40', do_clear=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "162"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/harvard_global_health_institute/hospital-capacity-by-state-60-population-contracted.csv'\n",
+    "db.load_file(kFILE_PATH, 'harvard_global_health_institute_60', do_clear=False)"
    ]
   },
   {
