Finalised hifld datasets

--- a/Scrapbook.ipynb
+++ b/Scrapbook.ipynb
@@ -53,7 +53,18 @@
        " 'github_spain_regions',\n",
        " 'harvard_global_health_institute_20',\n",
        " 'harvard_global_health_institute_40',\n",
-       " 'harvard_global_health_institute_60']"
+       " 'harvard_global_health_institute_60',\n",
+       " 'hde_acaps_government_measures',\n",
+       " 'hde_global_school_closures',\n",
+       " 'hde_inform_covid_indicators',\n",
+       " 'hde_total_covid_tests',\n",
+       " 'hifld_aircraft_landing_facilities',\n",
+       " 'hifld_hospitals',\n",
+       " 'hifld_local_emergency_operations_centers',\n",
+       " 'hifld_nursing_homes',\n",
+       " 'hifld_public_health_departments',\n",
+       " 'hifld_urgent_care_facilities',\n",
+       " 'hifld_us_ports_of_entry']"
       ]
      },
      "execution_count": 3,
@@ -445,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +465,7 @@
        "54"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +486,7 @@
        "108"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +507,7 @@
        "162"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,6 +516,269 @@
     "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/harvard_global_health_institute/hospital-capacity-by-state-60-population-contracted.csv'\n",
     "db.load_file(kFILE_PATH, 'harvard_global_health_institute_60', do_clear=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1741"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/HDE/acaps-covid-19-government-measures-dataset.csv'\n",
+    "db.load_file(kFILE_PATH, 'hde_acaps_government_measures')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1744"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/HDE/global-school-closures-covid-19.csv'\n",
+    "db.load_file(kFILE_PATH, 'hde_global_school_closures')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "191"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/HDE/inform-covid-indicators.csv'\n",
+    "db.load_file(kFILE_PATH, 'hde_inform_covid_indicators')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "77"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/HDE/total-covid-19-tests-performed-by-country.csv'\n",
+    "db.load_file(kFILE_PATH, 'hde_total_covid_tests')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19765"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/hifld/hifld/aircraft-landing-facilities.csv'\n",
+    "db.load_file(kFILE_PATH, 'hifld_aircraft_landing_facilities')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7570"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/hifld/hifld/hospitals.csv'\n",
+    "db.load_file(kFILE_PATH, 'hifld_hospitals')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5895"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/hifld/hifld/local-emergency-operations-centers-eoc.csv'\n",
+    "db.load_file(kFILE_PATH, 'hifld_local_emergency_operations_centers')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24431"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/hifld/hifld/nursing-homes.csv'\n",
+    "db.load_file(kFILE_PATH, 'hifld_nursing_homes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3699"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/hifld/hifld/public-health-departments.csv'\n",
+    "db.load_file(kFILE_PATH, 'hifld_public_health_departments')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4810"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/hifld/hifld/urgent-care-facilities.csv'\n",
+    "db.load_file(kFILE_PATH, 'hifld_urgent_care_facilities')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "349"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/hifld/hifld/us-ports-of-entry.csv'\n",
+    "db.load_file(kFILE_PATH, 'hifld_us_ports_of_entry')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/hifld/hifld/us-ports-of-entry.csv'\n",
+    "df = pd.read_csv(kFILE_PATH)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
