--- a/Run.ipynb
+++ b/Run.ipynb
@@ -49,7 +49,8 @@
        " 'cdc_global_adult_tobacco_survey',\n",
        " 'cdc_global_youth_tobacco_survey',\n",
        " 'cdc_behavioral_risk_factor_surveillance',\n",
-       " 'cdc_chronic_disease_indicators']"
+       " 'cdc_chronic_disease_indicators',\n",
+       " 'usafacts_covid_19_by_county']"
       ]
      },
      "execution_count": 1,
@@ -431,13 +432,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/us_cdc/us_cdc/500-cities-census-tract-level-data-gis-friendly-format-2019-release.csv'\n",
+    "db.load_file(kFILE_PATH, 'cdc_cities_census_tract_level')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/us_cdc/us_cdc/global-tobacco-surveillance-system-gtss-global-adult-tobacco-survey-gats.csv'\n",
+    "db.load_file(kFILE_PATH, 'cdc_global_adult_tobacco_survey')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/us_cdc/us_cdc/global-tobacco-surveillance-system-gtss-global-youth-tobacco-survey-gyts.csv'\n",
+    "db.load_file(kFILE_PATH, 'cdc_global_youth_tobacco_survey')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/us_cdc/us_cdc/nutrition-physical-activity-and-obesity-behavioral-risk-factor-surveillance-system.csv'\n",
+    "db.load_file(kFILE_PATH, 'cdc_behavioral_risk_factor_surveillance')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/us_cdc/us_cdc/u-s-chronic-disease-indicators-cdi.csv'\n",
+    "db.load_file(kFILE_PATH, 'cdc_chronic_disease_indicators')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "27210"
+       "221628"
       ]
      },
      "execution_count": 2,
@@ -446,92 +497,8 @@
     }
    ],
    "source": [
-    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/us_cdc/us_cdc/500-cities-census-tract-level-data-gis-friendly-format-2019-release.csv'\n",
-    "db.load_file(kFILE_PATH, 'cdc_cities_census_tract_level')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "131939"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/us_cdc/us_cdc/global-tobacco-surveillance-system-gtss-global-adult-tobacco-survey-gats.csv'\n",
-    "db.load_file(kFILE_PATH, 'cdc_global_adult_tobacco_survey')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "29545"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/us_cdc/us_cdc/global-tobacco-surveillance-system-gtss-global-youth-tobacco-survey-gyts.csv'\n",
-    "db.load_file(kFILE_PATH, 'cdc_global_youth_tobacco_survey')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "63028"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/us_cdc/us_cdc/nutrition-physical-activity-and-obesity-behavioral-risk-factor-surveillance-system.csv'\n",
-    "db.load_file(kFILE_PATH, 'cdc_behavioral_risk_factor_surveillance')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "814937"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/us_cdc/us_cdc/u-s-chronic-disease-indicators-cdi.csv'\n",
-    "db.load_file(kFILE_PATH, 'cdc_chronic_disease_indicators')"
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/USAFacts/'\n",
+    "db.load_file(kFILE_PATH, 'usafacts_covid_19_by_county')"
    ]
   },
   {
@@ -543,55 +510,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 814937 entries, 0 to 814936\n",
-      "Data columns (total 34 columns):\n",
-      "yearstart                    814937 non-null int64\n",
-      "yearend                      814937 non-null int64\n",
-      "locationabbr                 814937 non-null object\n",
-      "locationdesc                 814937 non-null object\n",
-      "datasource                   814937 non-null object\n",
-      "topic                        814937 non-null object\n",
-      "question                     814937 non-null object\n",
-      "response                     0 non-null float64\n",
-      "datavalueunit                728402 non-null object\n",
-      "datavaluetype                814937 non-null object\n",
-      "datavalue                    554139 non-null float64\n",
-      "datavaluealt                 554139 non-null float64\n",
-      "datavaluefootnotesymbol      270821 non-null object\n",
-      "datavaluefootnote            270821 non-null object\n",
-      "lowconfidencelimit           475125 non-null float64\n",
-      "highconfidencelimit          475125 non-null float64\n",
-      "stratificationcategory1      814937 non-null object\n",
-      "stratification1              814937 non-null object\n",
-      "stratificationcategory2      0 non-null float64\n",
-      "stratification2              0 non-null float64\n",
-      "stratificationcategory3      0 non-null float64\n",
-      "stratification3              0 non-null float64\n",
-      "geolocation                  808141 non-null object\n",
-      "responseid                   0 non-null float64\n",
-      "locationid                   814937 non-null int64\n",
-      "topicid                      814937 non-null object\n",
-      "questionid                   814937 non-null object\n",
-      "datavaluetypeid              814937 non-null object\n",
-      "stratificationcategoryid1    814937 non-null object\n",
-      "stratificationid1            814937 non-null object\n",
-      "stratificationcategoryid2    0 non-null float64\n",
-      "stratificationid2            0 non-null float64\n",
-      "stratificationcategoryid3    0 non-null float64\n",
-      "stratificationid3            0 non-null float64\n",
-      "dtypes: float64(14), int64(3), object(17)\n",
-      "memory usage: 211.4+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/us_cdc/us_cdc/u-s-chronic-disease-indicators-cdi.csv'\n",
     "df = pd.read_csv(kFILE_PATH)\n",
@@ -604,7 +532,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[pd.isna(df['geolocation'])]['geolocation']"
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/USAFacts/confirmed-covid-19-cases-in-us-by-state-and-county.csv'\n",
+    "df = pd.read_csv(kFILE_PATH)\n",
+    "df.shape"
    ]
   },
   {
@@ -612,7 +542,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/USAFacts/confirmed-covid-19-deaths-in-us-by-state-and-county.csv'\n",
+    "df = df.merge(\n",
+    "    pd.read_csv(kFILE_PATH),\n",
+    "    how='outer',\n",
+    "    on=['county_fips', 'county_name', 'state_name', 'state_fips', 'date', 'lat', 'long', 'geometry']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['geometry']"
+   ]
   },
   {
    "cell_type": "code",
