Finalised WHO data

--- a/Run.ipynb
+++ b/Run.ipynb
@@ -954,10 +954,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8286"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/WHO/tuberculosis-case-notifications.csv'\n",
+    "db.load_file(kFILE_PATH, 'who_tuberculosis_case_notifications')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6744"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kFILE_PATH = '/Users/milko/Local/Data/Disease/Kaggle-COVID-19/WHO/who-situation-reports-covid-19.csv'\n",
+    "db.load_file(kFILE_PATH, 'who_situation_reports_covid_19')"
+   ]
   },
   {
    "cell_type": "code",
