Optimised melt function usage

--- a/Scrapbook.ipynb
+++ b/Scrapbook.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,15 +167,14 @@
        "8              Maldives          MDV  1960      89863.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "result = pd.read_csv(file)\\\n",
-    "    .melt(id_vars=['country', 'country_code'])\\\n",
-    "    .rename(columns=dict(variable='year'))\\\n",
+    "    .melt(id_vars=['country', 'country_code'], var_name='year')\\\n",
     "    .dropna(axis=0, how='any')\n",
     "result['year'] = result['year'].apply(lambda x: x[5:])\n",
     "result.head()"
